--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <head>
   <title>estudio SKR</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 
 <body>
@@ -146,6 +147,9 @@
     <div class="footer-link1">Proyecto <a href="https://escapefromzcorp.com/"  title="Descubre nuestro último proyecto"> Escape to z corp</a></div>
     <div class="footer-link2">Síguenos a través de <a href="https://twitter.com/EstudioSKR?lang=es"  title="Entérate de todo a través de twitter">twitter</a></div>
     <div class="footer-link3">¿Quieres trabajar en <a href="#link-contacto" title="Contácta con nosotros"> videojuegos?</a></div>
+
+
+  <script src="js/script.css">
   </footer>
 
 
